src/test/ui/method-call-lifetime-args.stderr
error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:19:15: in fn ufcs
   |
LL |     S::late::<'static>(S, &0, &0);
   |               ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:14:13: in fn late::late
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args.rs:21:24: in fn ufcs
   |
LL |     S::late_implicit::<'static>(S, &0, &0);
   |                        ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args.rs:15:31: in fn late_implicit::late_implicit
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^

error: aborting due to 2 previous errors

